--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,21 @@
   --positionXOpposite:-20px;
   --positionYOpposite:-20px;
 } */
-*{
+* {
   box-sizing: border-box;
 }
-button{outline: none; cursor: pointer;}
-body{
+
+button {
+  outline: none;
+  cursor: pointer;
+}
+
+label {
+  color: var(--intensityBaa);
+
+}
+
+body {
   height: 100vh;
   width: 100vw;
   background: var(--background);
@@ -27,19 +37,19 @@ body{
   justify-content: center;
 }
 
-.conf{
+.conf {
   display: flex;
   flex-direction: column;
   padding: 30px 30px;
   border-radius: 30px;
   text-align: left;
   position: relative;
-  border: 1px rgba(255, 255, 255, 0.5) solid;
-  box-shadow: inset -1px -1px 5px rgba(209, 205, 199, 0.66),
-  inset 6px 6px 5px rgba(209, 205, 199, 0.66),
-    -6px -6px 16px rgba(255, 255, 255, 0.66),
-    6px 6px 16px rgba(209, 205, 199, 0.66);
+  border: 1px var(--intensityB) solid;
+  transition: box-shadow .3s;
+  box-shadow: var(--positionX) var(--positionY) var(--blur) var(--intensityD),
+    var(--positionXOpposite) var(--positionYOpposite) var(--blur) var(--intensityL);
 }
+
 .App {
   width: 1200px;
   display: grid;
@@ -49,169 +59,190 @@ body{
   justify-content: center;
   text-align: center;
 }
-.row{
+
+.row {
+  position: relative;
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 10fr 1fr;
   justify-content: center;
 }
-label{ display: block; margin: 10px 5px; text-transform: capitalize; line-height: 0.5em;margin-top: 1em; }
 
-.code span{  color: #3191c9; }
-.code{
+
+.code span {
+  color: #3191c9;
+}
+
+.code {
   border-radius: 15px;
   padding: 15px 15px;
   margin-top: 20px;
-  color: #383D40;
+  color: var(--intensityBaa);
   line-height: 1em;
 }
-.neu{
-  border: 1px rgba(255, 255, 255, 0.4) solid;
-  box-shadow: -3px -3px 11px rgba(255, 255, 255, 0.66),
-  3px 3px 11px rgba(209, 205, 199, 0.66);
+
+.neu {
+  transition: box-shadow .3s;
+  border: 1px var(--intensityS) solid;
+  box-shadow: var(--positionX) var(--positionY) var(--blur) var(--intensityD),
+    var(--positionXOpposite) var(--positionYOpposite) var(--blur) var(--intensityL);
 }
 
-.preview{
+.preview {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.stat{
+
+
+.shape-switch button:active {
+  background: var(--intensityB);
+  box-shadow: inset var(--positionX) var(--positionY) var(--blur) var(--intensityD),
+    inset var(--positionXOpposite) var(--positionYOpposite) var(--blur) var(--intensityL), 0 0 0 transparent, 0 0 0 transparent;
+}
+
+.shape-switch button {
+  border: 0;
+  border-radius: 5px;
+  background: transparent;
+  margin: 20px 10px;
+  width: 50%;
+  transition: all .3s;
+  box-shadow: inset 0 0 0 transparent, inset 0 0 0 transparent, 12px 12px 24px 0 var(--intensityD),
+    -12px -12px 24px 0 var(--intensityL);
+}
+
+button>svg {
+  filter: brightness(150%);
+  stroke: var(--intensityD);
+  padding: 10px 20px;
+  width: 100%;
+}
+
+.shape-switch {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  display: flex;
+}
+
+.shape-switch>svg {
+  width: 100%;
+  height: auto;
+}
+
+.shape-switch>.active {
+  box-shadow: inset var(--positionX) var(--positionY) var(--blur) var(--intensityD),
+    inset var(--positionXOpposite) var(--positionYOpposite) var(--blur) var(--intensityL);
+  background: var(--intensityB);
+  z-index: -2;
+}
+
+.active>svg {
+  filter: brightness(120%);
+}
+
+.activeA {
+  transform: scale(1.1);
+  opacity: .5;
+  border: 2px solid red;
+}
+
+/* slider  */
+/* please gawd help meeew */
+.stat {
+  color: var(--intensityBaa);
   text-align: center;
   width: 100%;
   display: grid;
   align-content: center;
   font-weight: 700;
-  font-size: .7em;
-  line-height: 1em;
-  border-radius: 10px;
-  grid-row: 2;
-  background: #3191c9;
+  font-size: 0.7em;
 }
 
-input[type=range]:hover label,input[type=range]:hover + label,input[type=range]:hover > label {
-  color: red;
+.lbl {
+  margin-top: 5px;
+  z-index: 1;
+  text-transform: capitalize;
 }
 
-.shape-switch button { margin-top: 20px; width: 50%; }
-.shape-switch{
-  grid-column: 1/3;
-  grid-row: 1/3;
-  display: flex;  
-}
-.shape-switch > svg{
-  width: 100%;
-height: auto;
-}
-.active > svg { stroke-opacity: .6;}
-.active{
-  background: rgba(255, 255, 255, 0.4);
-  transition: all .2s;
-  outline: none;
-  border: 1px rgba(255, 255, 255, 0.4) solid;
-  box-shadow: inset -1px -1px 5px rgba(209, 205, 199, 0.66),
-  inset 6px 6px 5px rgba(209, 205, 199, 0.66),
-    -6px -6px 16px rgba(255, 255, 255, 0.66),
-    6px 6px 16px rgba(209, 205, 199, 0.66);
-}
-/* slider  */
-/* please gawd help meeew */
-input[type=range].slider {
-  grid-row: 2;
-
-  border-radius: 20px;
-  margin: 0px 10px;
-  background-color: transparent;
-  -webkit-appearance: none;
-}
-input[type=range].slider:focus {
-  outline: none;
-}
-input[type=range].slider::-webkit-slider-runnable-track {
-  border-radius: 10px;
-  background: #3191c9;
-  border: 0;
-  width: 100%;
-  height: 20px;
-  cursor: pointer;
-}
-input[type=range].slider::-webkit-slider-thumb {
+input[type="range"] {
+  box-shadow: 6px 6px 10px var(--intensityD),
+    -6px -6px 10px var(--intensityL);
   overflow: hidden;
-  border-top: var(--background) 2px solid;
-  margin-top: 0px;
-  width: 17px;
-  height: 20px;
-  background: var(--background);
-  border: 0;
-  cursor: pointer;
+  z-index: 3;
+  border-radius: 100px;
+  background: transparent;
+  position: relative;
+  grid-row: 2;
+  grid-column: 1/3;
+  height: 31px;
   -webkit-appearance: none;
+  width: 100%;
 }
-input[type=range].slider:focus::-webkit-slider-runnable-track {
-  background: #3191c9;
+
+input[type="range"]:focus {
+  outline: none;
 }
-input[type=range].slider::-moz-range-track {
-  border-radius: 15px;
-  background: #3191c9;
-  border: 0;
+
+input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 100%;
-  cursor: pointer;
+  box-shadow: inset 6px 6px 10pxvar(--intensityD),
+    inset -6px -6px 10pxvar(--intensityL);
 }
-input[type=range].slider::-moz-range-thumb {
-  overflow: hidden;
-  border-top: var(--background) 2px solid;
-  border-radius: 0;
-  margin-top: 0px;
-  width: 17px;
-  height: 20px;
-  background: var(--background);
-  border: 0;
+
+input[type="range"]::-webkit-slider-thumb {
+  border-radius: 50%;
+  height: 100%;
+  width: 25px;
   cursor: pointer;
   -webkit-appearance: none;
+  border: 1px solid var(--intensityS);
+  background: var(--intensityS);
+  box-shadow: -255px 0px 0px 240px var(--intensityS);
 }
-input[type=range].slider::-ms-track {
-  background: #3191c9;
-  border-color: transparent;
-  border-width: 0px 0;
-  color: transparent;
+
+input[type="range"]::-moz-range-track {
   width: 100%;
-  height: 32px;
-  cursor: pointer;
+  height: 100%;
+  box-shadow: inset 6px 6px 10pxvar(--intensityD),
+    inset -6px -6px 10pxvar(--intensityL);
 }
-input[type=range].slider::-ms-fill-lower {
-  background: #3191c9;
-  border: 0;
-}
-input[type=range].slider::-ms-fill-upper {
-  background: #3191c9;
-  border: 0;
-}
-input[type=range].slider::-ms-thumb {
-  overflow: hidden;
-  border-top: var(--background) 2px solid;
-  border-radius: 0;
-  margin-top: 0px;
-  width: 17px;
-  height: 20px;
-  background: var(--background);
-  border: 0;
+
+input[type="range"]::-moz-range-thumb {
+  border-radius: 50%;
+  height: 100%;
+  width: 25px;
   cursor: pointer;
   -webkit-appearance: none;
+  border: 1px solid var(--intensityS);
+  background: var(--intensityS);
+  box-shadow: -255px 0px 0px 240px var(--intensityS);
 }
-input[type=range].slider:focus::-ms-fill-lower {
-  background: #3191c9;
+
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 6px 6px 10pxvar(--intensityD),
+    inset -6px -6px 10pxvar(--intensityL);
 }
-input[type=range].slider:focus::-ms-fill-upper {
-  background: #3191c9;
+input[type="range"]::-ms-thumb {
+  border-radius: 50%;
+  height: 100%;
+  width: 25px;
+  cursor: pointer;
+  -webkit-appearance: none;
+  border: 1px solid var(--intensityS);
+  background: var(--intensityS);
+  box-shadow: -255px 0px 0px 240px var(--intensityS);
 }
-/*TODO: Use one of the selectors from https://stackoverflow.com/a/20541859/7077589 and figure out
-how to remove the vertical space around the range input in IE*/
-@supports (-ms-ime-align:auto) {
-  /* Pre-Chromium Edge only styles, selector taken from hhttps://stackoverflow.com/a/32202953/7077589 */
-  input[type=range].slider {
-    margin: 0;
-    /*Edge starts the margin from the thumb, not the track as other browsers do*/
-  }
+
+input[type="range"]:focus::-ms-fill-lower {
+  background: #5c5ff8;
+}
+
+input[type="range"]:focus::-ms-fill-upper {
+  background: #5c5ff8;
 }
