Moved logic to Configurator component to avoid unecessary rerenders of other components

--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ body {
 
 button>svg {
   filter: brightness(150%);
-  stroke: var(--intensityD);
+  stroke: var(--intensityS);
   padding: 10px 20px;
   width: 100%;
 }
